--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -25,7 +25,7 @@ header img{
 body {
     padding: 0;
     margin: 0;
-    background-image: url('/assets/images/fundo1.jpeg');
+    background-image: url('../images/fundo1.jpeg');
     background-size: cover;
     
     
