--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -5,44 +5,26 @@
 }
 
 header {
-    display: flex;
+    padding-top: 30px ;
 }
 header h1{
-    margin-top: 30px;
+    
     text-align: center;
-    flex:1;
     color:white
 }
-header img{
-    
-    color:white;
-    margin-top: 20px;
-    margin-right: 20px;
-    width: 70px;
-    height: 70px;
-    border-radius: 250px;
-}
+
 body {
     padding: 0;
     margin: 0;
     background-image: url('../images/fundo1.jpeg');
     background-size: cover;
+    justify-items: center;
     
     
     
-}
-.box-left {
-    width: 500px; 
+    
 }
 
-.box-left img {
-    width: 70%;
-    transition: transform 0.5s ease;
-}
-
-.box-left:hover img {
-    transform: scale(1.1); 
-}
 header {
     background-color: #010409;
     width: 100vw;
@@ -97,83 +79,74 @@ main {
     display: flex;
     justify-content: center; 
     align-items: center; 
-    height: 700px ;
+    height: 73vh ;
+    flex: 1;
     
 }
-section {
 
+
+.center {
     
+    max-height: 70vh; /* Limita a altura máxima ao viewport */
+    overflow-y: auto;
+    overflow-x: hidden;
     backdrop-filter: blur(8px); 
     -webkit-backdrop-filter: blur(10px); 
-    width: 1800px;
-    height: 600px;
+    width: 80vw;
     border-radius: 15px; 
     border: 1px solid rgba(255, 255, 255, 0.3); 
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.);  
     display: flex;
-
-    
-}
-.center {
- 
-    flex: 2;
-    display: flex;
-    justify-content: space-between;
-    align-items: center; 
-    width: 100%;
     
 }
 
 .box-left {
     display: flex;
-    flex: 0.5;
-    margin-left: 30px;
-  
-   
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+    width: 100px;
 }
+
 .box-left img {
-    width: 450px;
-    border-radius: 230px;
+    transition: transform 0.5s ease;
+    border-radius: 50%;
     border: 4px solid rgba(99, 97, 97, 0.966);
+    width: 300px;
+    
+}
+
+.box-left:hover img {
+    transform: scale(1.1);
 }
 
 .box-right {
+    flex: 2;
     display: flex;
-    flex: 1;
     flex-direction: column;
-    height: 550px;
-    margin-right: 20px;
-    align-items: center; 
-    justify-content: center; 
-    position: relative; 
+    align-items: center;
+    justify-content: flex-start;
+    gap: 20px;
+    padding: 10px;
+    
 }
 
 .box-right h1 {
-    position: absolute;
-    right: 1080px;
-    top: 20px;
-    font-size: 35px;
+    font-size: 2rem;
     color: aliceblue;
-    text-align: start;
+    text-align: center;
 }
 
 .project-list {
     list-style-type: none;
     padding: 0;
-    margin: 10px;
-    display: flex; 
-    gap: 10px; 
+    display: flex;
     flex-direction: column;
-    
-}
-
-.project-list li {
-    position: relative;
-    right: 550px;
+    gap: 10px;
+    width: 100%;
 }
 
 .toggle-item {
-    position: relative ;
     cursor: pointer;
     padding: 10px 15px;
     border: 1px solid #ddd;
@@ -181,45 +154,38 @@ section {
     color: aliceblue;
     border-radius: 5px;
     transition: background-color 0.3s ease, transform 0.3s ease;
-    width: 200px; 
-    display: flex;
-    
+    width: 100%;
+    text-align: center;
 }
 
 .toggle-item:hover {
-    background-color: #1f2833; /
+    background-color: #1f2833;
 }
 
 .toggle-item:active {
-    transform: scale(0.98); 
+    transform: scale(0.98);
 }
 
 .description {
- 
-    display: none; 
-    background-color: rgba(255, 255, 255, 0); 
-    backdrop-filter: blur(8px); 
-    -webkit-backdrop-filter: blur(10px); 
-    border-radius: 15px; 
-    border: 1px solid rgba(255, 255, 255, 0.3); 
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.);  
-    width: 950px;
-    height: auto;
-    position: fixed;
-    left: 800px;
-    top: 20px;
+    display: none;
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(8px);
+    border-radius: 15px;
     padding: 15px;
-    font-size: 15px;
-    text-align:justify; 
-  
-        
+    font-size: 0.9rem;
+    color: aliceblue;
+    text-align: justify;
+    max-width: 100%;
+    
 }
+
 .description img {
-    flex:1;
-    width: 700px;
+    width: 100%;
     margin-top: 10px;
-    margin-left: 110px;
+    border-radius: 10px;
 }
+
+
 
 
 footer {
@@ -248,30 +214,83 @@ span{
 }
 .whatsappicon{
     margin-left: 80%;
+    display: flex;
 
  }
-.apresentacao {
-    position: absolute;
-    top: 10px;
-    margin-left: 45%;
-    color: aliceblue;
+
+ .ap2 {
     
+    backdrop-filter: blur(8px); 
+    -webkit-backdrop-filter: blur(10px); 
+    width: 80%;
+    border-radius: 15px; 
+    border: 1px solid rgba(255, 255, 255, 0.3); 
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0);  
+    display: flex; /* Permite organizar o conteúdo interno */
+    flex-direction: column; /* Coloca elementos em coluna */
+    align-items: center; /* Centraliza na horizontal */
+    justify-content: flex-start; /* Alinha o conteúdo no topo */
+    margin-top: 60px;
+}
+.apresentacao {
+    
+    color: aliceblue;
     
 }
 .apresentacao1 {
-    
-    position: absolute;
-    top: 50px; 
-    left: 50%; 
-    transform: translateX(-50%); 
     padding: 20px; 
-    width: 1000px; 
+    width: 70%; 
+    margin: 20px;
     color: aliceblue; 
-    text-align:justify; 
+    text-align: justify; 
     font-family: 'Arial', sans-serif;
     font-size: 18px; 
     line-height: 1.6;
     background-color: rgba(0, 0, 0, 0.5); 
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+}
+
+/* Responsividade */
+@media (max-width: 768px) {
+    .center {
+        flex-direction: column;
+        align-items: center;
+        
+    }
+
+    .box-right {
+        width: 100%;
+        margin-right: 30px;
+    }
+    .box-right h1 {
+        
+        margin-left: 30px;
+    }
+
+    .toggle-item {
+        font-size: 0.9rem;
+    }
+
+    .description img {
+        max-width: 90%;
+        margin: auto;
+    }
+    .footer {
+        position: fixed;
+        height: 10px;
+    }
+    .whatsappicon{
+        margin-left: 40%;
+    
+    }
+    .whatsappicon img{
+        max-width: 100%
+    
+    }
+    .box-left img {
+    
+        width: 120px;
+        
+    }
 }
