--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -87,7 +87,7 @@ main {
 
 .center {
     
-    max-height: 70vh; /* Limita a altura máxima ao viewport */
+    max-height: 70vh; 
     overflow-y: auto;
     overflow-x: hidden;
     backdrop-filter: blur(8px); 
@@ -226,10 +226,10 @@ span{
     border-radius: 15px; 
     border: 1px solid rgba(255, 255, 255, 0.3); 
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0);  
-    display: flex; /* Permite organizar o conteúdo interno */
-    flex-direction: column; /* Coloca elementos em coluna */
-    align-items: center; /* Centraliza na horizontal */
-    justify-content: flex-start; /* Alinha o conteúdo no topo */
+    display: flex; 
+    flex-direction: column; 
+    align-items: center; 
+    justify-content: flex-start; 
     margin-top: 60px;
 }
 .apresentacao {
@@ -311,7 +311,7 @@ span{
     }
     .apresentacao1 {
         
-        max-height: 55vh; /* Limita a altura máxima ao viewport */
+        max-height: 55vh; 
         overflow-y: auto;
         overflow-x: hidden;
         width: 320px;
