--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -87,7 +87,7 @@ main {
 
 .center {
     
-    max-height: 70vh; 
+    max-height: 70vh; /* Limita a altura máxima ao viewport */
     overflow-y: auto;
     overflow-x: hidden;
     backdrop-filter: blur(8px); 
@@ -196,7 +196,7 @@ footer {
     bottom: 0;
     background-color: #161b22; 
     width: 100%; 
-    height: 105px; 
+     
     align-items: center; 
     padding: 0 30px; 
 }
@@ -226,10 +226,10 @@ span{
     border-radius: 15px; 
     border: 1px solid rgba(255, 255, 255, 0.3); 
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0);  
-    display: flex; 
-    flex-direction: column; 
-    align-items: center; 
-    justify-content: flex-start; 
+    display: flex; /* Permite organizar o conteúdo interno */
+    flex-direction: column; /* Coloca elementos em coluna */
+    align-items: center; /* Centraliza na horizontal */
+    justify-content: flex-start; /* Alinha o conteúdo no topo */
     margin-top: 60px;
 }
 .apresentacao {
@@ -253,6 +253,15 @@ span{
 
 /* Responsividade */
 @media (max-width: 768px) {
+
+
+    header {
+
+        height: 60px;
+    }
+    h1 {
+        font-size: 20px;
+    }
     .center {
         flex-direction: column;
         align-items: center;
@@ -267,6 +276,10 @@ span{
         
         margin-left: 30px;
     }
+    .box-right h1 i {
+        
+        font-size: 25px;
+    }
 
     .toggle-item {
         font-size: 0.9rem;
@@ -277,8 +290,17 @@ span{
         margin: auto;
     }
     .footer {
+        display: flex;
         position: fixed;
-        height: 10px;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #f0f0f0; 
+        width: 100%; 
+        height: 105px; 
+        align-items: center; 
+        padding: 0 10px;  
+        
     }
     .whatsappicon{
         margin-left: 40%;
@@ -298,23 +320,31 @@ span{
         align-items: center;
         justify-items: center;
         
+        
     }
-    nav ul li{
-            margin-top: 50px;
-            margin-right: 55px;
+    nav ul {
+            
+            
+            
         
     }
     nav ul li{
         background-color: #323333af;
+        margin-right: 55px;
+        font-size: 5px;
         
+    }
+    nav ul li a {
+        
+        font-size: 15px;
         
     }
     .apresentacao1 {
         
-        max-height: 55vh; 
+        max-height: 55vh; /* Limita a altura máxima ao viewport */
         overflow-y: auto;
         overflow-x: hidden;
-        width: 320px;
+        width: 290px;
         text-align: center;
     
     }
