--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -334,5 +334,9 @@ span{
         text-align: center;
     
     }
+    .ap2{
+        align-items: center;
+        justify-items: center;
+    }
     
 }
