--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -338,6 +338,7 @@ span{
         align-items: center;
         justify-items: center;
         margin-left:30px;
+        margin-bottom:15px;
     }
     h5 {
         font-size: 8px;
