--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -196,7 +196,6 @@ footer {
     bottom: 0;
     background-color: #161b22; 
     width: 100%; 
-     
     align-items: center; 
     padding: 0 30px; 
 }
@@ -291,13 +290,17 @@ span{
     }
    
     .whatsappicon{
-        margin-left: 40%;
+        display: flex; /* Torna os itens flexíveis */
+        justify-content: center; /* Alinha os ícones no centro */
+        margin-top: 5px; /* Adiciona um espaçamento superior */
+        margin-left: 200px;
+    }
+    .whatsappicon img {
+        max-width: 35px;
+        
     
     }
-    .whatsappicon img{
-        max-width: 80%;
-    
-    }
+  
     span{
         font-size: 10px;
     }
@@ -334,13 +337,22 @@ span{
         text-align: center;
     
     }
+    
+    h5 {
+
+        font-size: 8px;
+    }
     .ap2{
         align-items: center;
         justify-items: center;
         margin-left:30px;
-        margin-top:15px;
+        margin-top: 15px;
     }
     h5 {
         font-size: 8px;
     }
+    footer{
+        height: 50px;
+    }
 }
+    
